test/data/valid-messages/opposite-endian.message
## Message of opposite endianness, with lots of random fields in it

OPPOSITE_ENDIAN

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

FIELD_NAME unkn
TYPE INT32
INT32 0xfeeb

ALIGN 8
END_LENGTH Header

START_LENGTH Body

TYPE INT32
INT32 89765432
TYPE UINT32
UINT32 0xfffffff
TYPE STRING
STRING 'Hello this is a string'
TYPE DOUBLE
DOUBLE 3.14159

TYPE NIL

END_LENGTH Body
