test/data/invalid-messages/array-of-nil.message
# Message with an array of NIL (not allowed)

VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

END_LENGTH Header
ALIGN 8
START_LENGTH Body
TYPE ARRAY
TYPE NIL
UINT32 5

## we want it to fail because of type nil, not because the length is no good
## so pad out the message with 5 bytes
BYTE 1
BYTE 2
BYTE 3
BYTE 4
BYTE 5

END_LENGTH Body
